--- a/Waldo.html
+++ b/Waldo.html
@@ -24,7 +24,7 @@
               <label><input type='checkbox' value=0 onclick='toggle(this, 1);'>Show Blue</label> <br>
               <label><input type='checkbox' value=0 onclick='toggle(this, 2);'>Show Yellow</label> <br>
 
-            <label><input type='checkbox' value="crop" onclick='onCheck(this);'>Mask Make Search Area Smaller</label> <br>
+            <label><input type='checkbox' value="crop" onclick='crop(this);'>Mask Make Search Area Smaller</label> <br>
         
         </div>
 
