--- a/Waldo.html
+++ b/Waldo.html
@@ -20,11 +20,11 @@
             <button class='resetbutton' id="Reset" value="Reset" onclick='reset()'>Reset</button><br>
             <hr class='divider'>
             
-              <label><input class="checkboxes" type='checkbox' onclick='updateCheckbox(this, 0);'>Show Red</label> <br>
-              <label><input class="checkboxes" type='checkbox' onclick='updateCheckbox(this, 1);'>Show Blue</label> <br>
-              <label><input class="checkboxes" type='checkbox' onclick='updateCheckbox(this, 2);'>Show Yellow</label> <br>
+              <label><input class="checkboxes" autocomplete="off" type='checkbox' onclick='updateCheckbox(this, 0);'>Show Red</label> <br>
+              <label><input class="checkboxes" autocomplete="off" type='checkbox' onclick='updateCheckbox(this, 1);'>Show Blue</label> <br>
+              <label><input class="checkboxes" autocomplete="off" type='checkbox' onclick='updateCheckbox(this, 2);'>Show Yellow</label> <br>
 
-            <label><input class="checkboxes" type='checkbox' value="crop" onclick='crop(this);'>Mask Make Search Area Smaller</label> <br>
+            <label><input class="checkboxes" autocomplete="off" type='checkbox' value="crop" onclick='crop(this);'>Mask Make Search Area Smaller</label> <br>
         
         </div>
 
