fix spelling of gray

--- a/Waldo.html
+++ b/Waldo.html
@@ -26,7 +26,7 @@
 
             <label><input class="checkboxes" type='checkbox' value="crop" onclick='crop(this);'>Mask Make Search Area Smaller</label> <br>
             
-            <button class='button' id="grayout" onclick='greyout()'>Gray Out Area</button><br>
+            <button class='button' id="grayout" onclick='grayout()'>Gray Out Area</button><br>
             
             <button class='button' id="notgrayout" onclick='notgrayout()'>Keep This Area</button><br>
 
