add new buttons
reset colors, reset masking

--- a/Waldo.html
+++ b/Waldo.html
@@ -17,6 +17,8 @@
         
         <div id="filter">
             <button class='button' id="Reset" value="Reset" onclick='reset()'>Reset All</button><br>
+            <button class='button' id="resetcolors" value="ResetColors" onclick='reset()'>Reset - Revert to Full Colors</button><br>
+            <button class='button' id="resetmasks" value="ResetMasks" onclick='reset()'>Reset - Remove All Gray</button><br>
             <hr class='divider'>
             <div id="redblock">
                 <label>
