--- a/Waldo.html
+++ b/Waldo.html
@@ -17,8 +17,8 @@
         
         <div id="filter">
             <button class='button' id="Reset" value="Reset" onclick='reset()'>Reset All</button><br>
-            <button class='button' id="resetcolors" value="ResetColors" onclick='reset()'>Reset - Colors</button><br>
-            <button class='button' id="resetmasks" value="ResetMasks" onclick='reset()'>Reset - Gray</button><br>
+            <button class='button' id="resetcolors" value="ResetColors" onclick='resetColor()'>Reset - Colors</button><br>
+            <button class='button' id="resetmasks" value="ResetMasks" onclick='resetGray()'>Reset - Gray</button><br>
             <hr class='divider'>
             <div id="redblock">
                 <label>
