remove useless function \nadd reset colors function

--- a/Waldo.html
+++ b/Waldo.html
@@ -36,7 +36,7 @@
                 <input type="range" value=0 >
             </div>
 
-            <label><input class="checkboxes" type='checkbox' value="crop" onclick='crop(this);'>Mask Make Search Area Smaller</label> <br>
+            <!--<label><input class="checkboxes" type='checkbox' value="crop" onclick='crop(this);'>Mask Make Search Area Smaller</label> <br>-->
             
             <button class='button' id="grayOut" onclick='grayOut()'>Gray Out Area</button><br>
             
