-rename app, change directory of puzzles

--- a/Waldo.html
+++ b/Waldo.html
@@ -10,11 +10,12 @@
         <!--<script type="text/javascript" src="https://raw.githubusercontent.com/phoboslab/WebGLImageFilter/master/webgl-image-filter.js"></script>-->
 
         <title>
-            Where's Waldo Assistant
+            Here's Waldo
         </title>
     </head>
     <body>
-        <h3>Where's Waldo Assistant</h3>
+        <h1>Here's Waldo!</h1>
+        <h4>Some description to help user...</h4>
         
         <div id="filter">
             <div id="filter-controls">
